# ComicLibraryQML

./: CLC.qmlproject  CLC.qmlproject.qtds  CMakeLists.txt  CMakeLists.txt.user.gfkGdw  README.md  qmlmodules  worker.h
content/: App.qml  AppSettings.qml  CMakeLists.txt  ConfigDrawer.qml  Screen01.qml  Screen02.qml  Screen04.qml  myapp.rc  oldScreen01.ui.qml
imports/: CMakeLists.txt
imports/CLC/: CMakeLists.txt  qmldir
imports/CLC/designer/: plugin.metainfo
scripts/: validate_crossplatform.ps1  validate_crossplatform.sh
src/: fileio.cpp  fileio.h  import_qml_plugins.h  main.cpp
